Made some adjustments to the log call.

--- a/VersaTEL_G2_CLI/logging.conf
+++ b/VersaTEL_G2_CLI/logging.conf
@@ -60,8 +60,8 @@ formatter=cli_input
 
 #文件处理器，cli输出
 [handler_file_cli_output]
-class=FileHandler
-args=('logging.log', 'a')
+class=handlers.RotatingFileHandler
+args=('logging.log', 'a',10*1024*1024, 5)
 level=DEBUG
 formatter=cli_output
 
