--- a/VersaTEL_G2_CLI/logging_CLI.conf
+++ b/VersaTEL_G2_CLI/logging_CLI.conf
@@ -1,11 +1,11 @@
 [loggers]
-keys=root,cli_input,cli_output,localmessage
+keys=root,cli,cli_output,localmessage
 
 [handlers]
-keys=fileHandler,consoleHandler,file_cli_input,file_cli_output,file_localmessage
+keys=fileHandler,consoleHandler,filehandler_cli,file_cli_output,file_localmessage
 
 [formatters]
-keys=simpleFormatter,cli_input,cli_output,localmessage
+keys=simpleFormatter,formatter_cli,cli_output,localmessage
 
 [logger_root]
 level=DEBUG
@@ -13,7 +13,7 @@ handlers=fileHandler
 
 [handler_fileHandler]
 class=FileHandler
-args=('logging.log', 'a')
+args=('CLI.log', 'a')
 level=ERROR
 formatter=simpleFormatter
 
@@ -21,10 +21,10 @@ formatter=simpleFormatter
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 datefmt=[%Y-%m-%d %H:%M:%S %a]
 
-[logger_cli_input]
+[logger_cli]
 level=DEBUG
-handlers=file_cli_input
-qualname=cli_input
+handlers=filehandler_cli
+qualname=cli
 propagate=0
 
 #,consoleHandler
@@ -51,24 +51,24 @@ formatter=cli_output
 
 
 
-#文件处理器，cli输入
-[handler_file_cli_input]
-class=FileHandler
-args=('logging.log', 'a')
+#文件处理器，CLI
+[handler_filehandler_cli]
+class=handlers.RotatingFileHandler
+args=('CLI.log', 'a',10*1024*1024, 5)
 level=DEBUG
-formatter=cli_input
+formatter=formatter_cli
 
 #文件处理器，cli输出
 [handler_file_cli_output]
 class=handlers.RotatingFileHandler
-args=('logging.log', 'a',10*1024*1024, 5)
+args=('CLI.log', 'a',10*1024*1024, 5)
 level=DEBUG
 formatter=cli_output
 
 #本地信息
 [handler_file_localmessage]
 class=FileHandler
-args=('logging.log', 'a')
+args=('CLI.log', 'a')
 level=DEBUG
 formatter=localmessage
 
@@ -82,9 +82,9 @@ formatter=localmessage
 
 
 
-#CLI输入
-[formatter_cli_input]
-format = %(asctime)s - [%(username)s] - [%(type)s] - [%(describe1)s] - [%(describe2)s] - [%(cmd)s]
+#CLI格式器
+[formatter_formatter_cli]
+format = %(asctime)s - [%(username)s] - [%(type)s] - [%(describe1)s] - [%(describe2)s] - [%(data)s]
 datefmt=[%Y/%m/%d %I:%M:%S]
 
 #CLI输出
