Modify the format of log input and output records.

--- a/VersaTEL_G2_CLI/logging_CLI.conf
+++ b/VersaTEL_G2_CLI/logging_CLI.conf
@@ -1,11 +1,11 @@
 [loggers]
-keys=root,cli,cli_output,localmessage
+keys=root,cli_input,cli_output,localmessage
 
 [handlers]
-keys=fileHandler,consoleHandler,filehandler_cli,file_cli_output,file_localmessage
+keys=fileHandler,consoleHandler,file_cli_input,file_cli_output,file_localmessage
 
 [formatters]
-keys=simpleFormatter,formatter_cli,cli_output,localmessage
+keys=simpleFormatter,cli_input,cli_output,localmessage
 
 [logger_root]
 level=DEBUG
@@ -21,10 +21,10 @@ formatter=simpleFormatter
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 datefmt=[%Y-%m-%d %H:%M:%S %a]
 
-[logger_cli]
+[logger_cli_input]
 level=DEBUG
-handlers=filehandler_cli
-qualname=cli
+handlers=file_cli_input
+qualname=cli_input
 propagate=0
 
 #,consoleHandler
@@ -52,11 +52,11 @@ formatter=cli_output
 
 
 #文件处理器，CLI
-[handler_filehandler_cli]
+[handler_file_cli_input]
 class=handlers.RotatingFileHandler
 args=('CLI.log', 'a',10*1024*1024, 5)
 level=DEBUG
-formatter=formatter_cli
+formatter=cli_input
 
 #文件处理器，cli输出
 [handler_file_cli_output]
@@ -83,13 +83,13 @@ formatter=localmessage
 
 
 #CLI格式器
-[formatter_formatter_cli]
+[formatter_cli_input]
 format = %(asctime)s - [%(username)s] - [%(type)s] - [%(describe1)s] - [%(describe2)s] - [%(data)s]
 datefmt=[%Y/%m/%d %I:%M:%S]
 
 #CLI输出
 [formatter_cli_output]
-format = %(asctime)s - [%(levelname)s] - [%(result)s] - %(message)s
+format = %(asctime)s - [%(username)s] - [%(type)s] - [%(describe1)s] - [%(describe2)s] - [%(data)s]
 datefmt=[%Y/%m/%d %I:%M:%S]
 
 #本地信息
